app/design/adminhtml/Magento/backend/Magento_Ui/web/css/source/module/_data-grid.less
// /**
//  * Copyright © Magento, Inc. All rights reserved.
//  * See COPYING.txt for license details.
//  */

//
//  UI -> Data Grid
//  _____________________________________________

//
//  Variables
//  _____________________________________________

//  Data Grid Change Indicator
@data-grid-row-changed__icon: @icon-edit__content;
@data-grid-row-changed-tooltip__background: @color-white-fog2;

@data-grid-tooltip__background-color: @color-lazy-sun;
@data-grid-tooltip__border-color: @color-dark-grayish-orange;
@data-grid-tooltip__box-shadow: 0 2px 8px 0 rgba(0, 0, 0, .3);
@data-grid-tooltip-content__width: 24rem;
@data-grid-tooltip__z-index: @z-index-1;

//
//  Components
//  ---------------------------------------------

@import 'data-grid/_data-grid-static.less';
@import 'data-grid/_data-grid-header.less';

//

.admin__data-grid-outer-wrap {
    min-height: @data-grid-spinner__size + @indent__base * 2;
    position: relative; // Used to keep spinner inside
}

.admin__data-grid-wrap {
    margin-bottom: 2rem;
    max-width: 100%;
    overflow-x: auto;
    padding-bottom: 1rem;
    padding-top: @data-grid-header-row__indent;
}

.admin__data-grid-loading-mask {
    background: rgba(255, 255, 255, .5);
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    z-index: @data-grid-overlay__z-index;

    .spinner {
        font-size: @data-grid-spinner__size;
        left: 50%;
        margin-left: -(@data-grid-spinner__size / 2);
        margin-top: -(@data-grid-spinner__size / 2);
        position: absolute;
        top: 50%;
    }
}

.data-grid-cell-content {
    display: inline-block;
    overflow: hidden;
    width: 100%;
}

body._in-resize {
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
    cursor: col-resize;
    user-select: none;

    .data-grid-th,
    .data-grid-th._sortable,
    .data-grid-th._draggable {
        cursor: col-resize !important;
    }

    * {
        cursor: col-resize !important;
    }
}

._layout-fixed {
    table-layout: fixed;
}
/* ... */

